force-app/main/default/objects/Camping_Item__c/Camping_Item__c.object-meta.xml
<CustomObject>
    <label>キャンプ持ち物品目</label>
    <nameField>
        <label>キャンプ持ち物品目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>